# knx-rs

./: .gitignore  .release-please-manifest.json  AUDIT.md  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  publish.yml  release-please.yml
examples/knx-demo-client/: Cargo.toml
examples/knx-demo-client/src/: main.rs
examples/knx-demo-device/: Cargo.toml
examples/knx-demo-device/src/: lib.rs  main.rs
examples/knx-demo-device/tests/: integration.rs
examples/knx-rs-demo-client/: Cargo.toml
examples/knx-rs-demo-client/src/: main.rs
examples/knx-rs-demo-device/: Cargo.toml
examples/knx-rs-demo-device/src/: lib.rs  main.rs
examples/knx-rs-demo-device/tests/: integration.rs
knx-core/: CHANGELOG.md  Cargo.toml
knx-core/src/: address.rs  apdu.rs  cemi.rs  cemi_tests.rs  device.rs  knxip.rs  lib.rs  message.rs  tpdu.rs  types.rs
knx-core/src/dpt/: convert.rs  mod.rs
knx-core/src/dpt/convert/: numeric.rs  string.rs
knx-core/tests/: golden_cemi.rs  golden_cemi_setters.rs  golden_dpt.rs
knx-core/tests/fixtures/: cemi_setter_vectors.json
knx-device/: CHANGELOG.md  Cargo.toml
knx-device/src/: address_table.rs  application_layer.rs  application_program.rs  association_table.rs  bau.rs  bau_persistence.rs  device_object.rs  group_object.rs  group_object_table.rs  interface_object.rs  lib.rs  memory.rs  table_object.rs  transport_layer.rs
knx-device/src/application_layer/: encode.rs  mod.rs  parse.rs  types.rs
knx-device/src/property/: data.rs  mod.rs  types.rs
knx-ip/: CHANGELOG.md  Cargo.toml
knx-ip/src/: discovery.rs  error.rs  lib.rs  multiplex.rs  ops.rs  router.rs  tunnel.rs  tunnel_server.rs  url.rs
knx-ip/tests/: tunnel_integration.rs
knx-prod/: CHANGELOG.md  Cargo.toml  HASHING.md  README.md
knx-prod/reference/ets-hash-reference/: .gitignore  Program.cs  ets-hash-reference.csproj
knx-prod/scripts/: fetch-openknx-fixtures.sh
knx-prod/src/: archive.rs  error.rs  hash.rs  lib.rs  main.rs  parse.rs  sign.rs  split.rs
knx-prod/tests/: openknx.rs
knx-prod/tests/fixtures/: gira_medium_app.xml  gira_small_app.xml  leakage_app.xml  mdt_be_app.xml
knx-prod/tests/fixtures/openknx/: .gitignore
knx-rs-core/: Cargo.toml
knx-rs-core/src/dpt/: mod.rs
knx-rs-core/tests/: golden_cemi.rs  golden_cemi_setters.rs  golden_dpt.rs
knx-rs-device/: Cargo.toml
knx-rs-device/src/: application_program.rs  bau.rs  bau_persistence.rs  device_object.rs  group_object.rs  group_object_table.rs  table_object.rs  transport_layer.rs
knx-rs-device/src/application_layer/: encode.rs  mod.rs  parse.rs  types.rs
knx-rs-device/src/property/: mod.rs
knx-rs-ip/: Cargo.toml
knx-rs-ip/src/: discovery.rs  lib.rs  multiplex.rs  ops.rs  router.rs  tunnel.rs  tunnel_server.rs
knx-rs-ip/tests/: tunnel_integration.rs
knx-rs-prod/: Cargo.toml  README.md
knx-rs-prod/reference/: leakage.knxprod
knx-rs-prod/reference/ets-hash-reference/: DebugDump.cs  README.md
knx-rs-prod/src/: lib.rs  main.rs
knx-rs-prod/tests/: openknx.rs
knx-rs-prod/tests/fixtures/: .gitattributes  gira_large_app.xml  mdt_akk_app.xml
knx-rs-tp/: Cargo.toml
knx-rs-tp/src/: frame.rs  protocol.rs
knx-tp/: CHANGELOG.md  Cargo.toml
knx-tp/src/: commands.rs  frame.rs  lib.rs  protocol.rs
knx-xml/: Cargo.toml  HASHING.md
knx-xml/src/: archive.rs  error.rs  lib.rs  main.rs  split.rs
knx-xml/tests/fixtures/: golden_vectors.json  leakage_app.xml  minimal_app.xml
test-vectors/: Makefile  generate.cpp
