[workspace]
resolver = "2"
members = [
  "knx-rs-core",
  "knx-rs-ip",
  "knx-rs-device",
  "knx-rs-tp",
  "knx-rs-prod",
  "examples/knx-rs-demo-device",
  "examples/knx-rs-demo-client",
]

[workspace.package]
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/knx-rs"
homepage = "https://github.com/metaneutrons/knx-rs"
authors = ["Fabian Schmieder"]
