[package]
name = "knx-core"
description = "Platform-independent KNX protocol types, CEMI frames, and DPT conversions"
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/knx-rs"
authors = ["Fabian Schmieder"]
readme = "../README.md"
homepage = "https://github.com/metaneutrons/knx-rs"
documentation = "https://docs.rs/knx_core"
keywords = ["knx", "home-automation", "cemi", "dpt", "no-std"]
categories = ["embedded", "no-std", "encoding", "hardware-support"]

[features]
default = ["std"]
std = []
serde = ["dep:serde"]

[dependencies]
libm = "0.2"
serde = { version = "1", default-features = false, features = ["derive", "alloc"], optional = true }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
