[package]
name = "knx-ip"
description = "KNXnet/IP tunnel, routing, and discovery"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "GPL-3.0-only"
repository = "https://github.com/metaneutrons/knx-rs"
authors = ["Fabian Schmieder"]
readme = "../README.md"
homepage = "https://github.com/metaneutrons/knx-rs"
documentation = "https://docs.rs/knx_ip"
keywords = ["knx", "home-automation", "knxnet-ip", "tunnel", "multicast"]
categories = ["network-programming", "hardware-support"]

[dependencies]
knx-core = { path = "../knx-core" }
tokio = { version = "1", features = ["net", "time", "sync", "macros", "rt"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
knx-device = { path = "../knx-device" }
knx-core = { path = "../knx-core" }
tokio = { version = "1", features = ["full", "test-util"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
