[package]
name = "knx-ip"
description = "KNXnet/IP tunnel, routing, and discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "../README.md"
homepage.workspace = true
documentation = "https://docs.rs/knx_ip"
keywords = ["knx", "home-automation", "knxnet-ip", "tunnel", "multicast"]
categories = ["network-programming", "hardware-support"]

[dependencies]
knx-core = { path = "../knx-core", version = "0.1.0" }
tokio = { version = "1", features = ["net", "time", "sync", "macros", "rt"] }
tracing = "0.1"
thiserror = "2"

[dev-dependencies]
knx-device = { path = "../knx-device", version = "0.1.0" }
knx-core = { path = "../knx-core", version = "0.1.0" }
tokio = { version = "1", features = ["full", "test-util"] }

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
