[package]
name = "knx-prod"
description = "Cross-platform .knxprod generator for KNX ETS product databases"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
homepage.workspace = true
documentation = "https://docs.rs/knx_prod"
keywords = ["knx", "ets", "knxprod", "home-automation", "signing"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
base64 = "0.22.1"
md-5 = "0.11.0"
quick-xml = "0.39.2"
regex = "1.11.1"
thiserror = "2.0.18"
zip = { version = "8.5.1", default-features = false, features = ["deflate"] }
tempfile = "3.27.0"

[dependencies.clap]
version = "4.6.1"
features = ["derive"]
optional = true

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "knx-prod"
required-features = ["cli"]

[lints.rust]
missing_docs = "warn"
unsafe_code = "deny"
unused_qualifications = "warn"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
missing_errors_doc = "warn"
missing_panics_doc = "warn"
unwrap_used = "warn"
expect_used = "warn"
module_name_repetitions = "allow"
must_use_candidate = "allow"
