[package]
name = "knx-demo-client"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
knx-core = { path = "../../knx-core", version = "0.1.0" }
knx-ip = { path = "../../knx-ip", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
