[package]
name = "knx-rs-demo-client"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
knx-rs-core = { path = "../../knx-rs-core", version = "0.1.0" }
knx-rs-ip = { path = "../../knx-rs-ip", version = "0.1.0" }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
